fixing maternal eligibility listboard

--- a/td_dashboard/templates/td_dashboard/buttons/eligibility_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/eligibility_button.html
@@ -1,5 +1,5 @@
 
-{% if not eligible %}
+{% if not is_eligible %}
 <div class="btn-group">
 <a type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
 Not eligible <span class="caret"></span>
