--- a/td_dashboard/templates/td_dashboard/maternal_eligibility/listboard.html
+++ b/td_dashboard/templates/td_dashboard/maternal_eligibility/listboard.html
@@ -33,7 +33,9 @@
     <td style="white-space: nowrap">
     <div class="btn-group">
     {% screening_button result %}
-    {% eligibility_button result %}
+    {% if not result.is_eligible %}
+    	{% eligibility_button result %}
+    {% endif %}
     {% if result.is_eligible %}
         {% if result.consent %}
             {% dashboard_button result %}
