--- a/td_dashboard/templates/td_dashboard/buttons/consent_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/consent_button.html
@@ -1,4 +1,4 @@
- <a id="maternalconsent_add_{{ eligibility_id }}" 
+ <a id="subjectconsent_add_{{ eligibility_id }}" 
  	title="{{ title }}"
     class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
         href="{{ add_consent_href }}">
