--- a/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
@@ -4,8 +4,8 @@
 {% load td_dashboard_extras %}
              
 {% block listboard_panel %}
-    <a id="maternaleligibility_add" title="add eligibility" class="btn btn-sm btn-default" role="button" 
-        href="{{ subject_screening__add_url }}?next={{ subject_screening_listboard_url }}">
+    <a id="subjectscreening_add" title="add eligibility" class="btn btn-sm btn-default" role="button" 
+        href="{{ subject_screening_add_url }}?next={{ subject_screening_listboard_url }}">
             <i class="fa fa-plus fa-sm"></i> Add Subject Screening
     </a>
     <a id="return_to_home" title="go back" class="btn btn-sm btn-default" role="button" 
