--- a/td_dashboard/templates/td_dashboard/buttons/screening_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/screening_button.html
@@ -1,4 +1,4 @@
-    <a id="subjectscreening_change_{{ eligibility_id }}" title="{{ title }}" role="button" 
+    <a id="subjectscreening_change_{{ screening_identifier }}" title="{{ title }}" role="button" 
        class="btn btn-default btn-sm"
            href="{{ href }}">
         <i class="fa fa-pencil-alt fa-sm"></i>
