--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/top_bar.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/top_bar.html
@@ -1,3 +1,3 @@
 {% extends 'edc_subject_dashboard/dashboard/topbar.html' %}
 
-{% block close_url %}href="{% url maternal_subject_listboard_url %}?q={{ subject_identifier }}"{% endblock close_url %}
+{% block close_url %}href="{% url subject_listboard_url %}?q={{ subject_identifier }}"{% endblock close_url %}
