--- a/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
@@ -5,7 +5,7 @@
              
 {% block listboard_panel %}
     <a id="subjectscreening_add" title="add eligibility" class="btn btn-sm btn-default" role="button" 
-        href="{{ subject_screening_add_url }}?next={{ subject_screening_listboard_url }}">
+        href="{{ subject_screening_add_url }}?next={{ screening_listboard_url }}">
             <i class="fa fa-plus fa-sm"></i> Add Subject Screening
     </a>
     <a id="return_to_home" title="go back" class="btn btn-sm btn-default" role="button" 
