--- a/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
@@ -20,6 +20,7 @@
     <th>#</th>
     <th></th>
     <th>Antenatal Enrollment</th>
+    <th>Antenatal Visit Membership</th>
     <th>Screening Identifier</th>
     <th>Subject Identifier</th>
     <th>Age</th>
@@ -57,6 +58,19 @@
         {% endif %}
     {% endif %}
     </div>
+    </td>
+    
+    <td style="white-space: nowrap">
+    <div class="btn-group">
+    {% if result.is_consented %}
+        {% if result.antenatal_visit_membership %}
+            {% antenatal_visit_membership_button result %}
+        {% else %}
+            {% antenatal_visit_membership_button result %}
+        {% endif %}
+    {% endif %}
+    </div>
+    </td>
 {% endblock listboard_table_button_column %}
 
 
