infant dashboard links bug

--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/infant_dashboard_links.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/infant_dashboard_links.html
@@ -1,4 +1,5 @@
 {% load td_dashboard_extras %}
+{% if infant_registered_subject %}
 <table class="table table-condensed">
     <thead></thead>
     <tbody>
@@ -9,3 +10,4 @@
 		</tr>
     </tbody>
 </table>
+{% endif %}
