--- a/td_dashboard/templates/td_dashboard/buttons/infant_dashboard_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/infant_dashboard_button.html
@@ -1,3 +1,3 @@
  <a id="infant_subject_dashboard_{{ subject_identifier }}" class="btn btn-primary btn-sm" role="button"   
-title="Go to subject's dashboard" href="{% url infant_subject_dashboard_url subject_identifier %}">
+title="Go to subject's dashboard" href="{% url subject_dashboard_url subject_identifier %}">
 <i class="fa fa-user-circle fa-sm"></i> Dashboard  <i class="fa fa-share"></i></a>
