--- a/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
@@ -40,13 +40,15 @@
     {% if result.is_eligible %}
     	{% if not result.consent_version %}
     		{% consent_version_button result %}
-    	{% else %}
+    	{%else%}
+    		{% consent_version_button result %}
+    		
 	        {% if result.consent %}
 	            {% dashboard_button result %}
 	        {% else %}
 	            {% consent_button result %}
-	         {% endif %}
-        {% endif %}
+	        {% endif %}
+	     {% endif %}
     {% endif %}
     </div>
     </td>
