update dashboard for antenatal enrollment eligibility

--- a/td_dashboard/templates/td_dashboard/buttons/antenatal_visit_membership_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/antenatal_visit_membership_button.html
@@ -8,5 +8,5 @@
             class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
         href="{{ add_antenatal_visit_membership_href }}">
         {% endif %}
-     	Anternatal Visit Membership
+     	Antenatal Visit Membership
  </a>
