--- a/td_dashboard/templates/td_dashboard/buttons/antenatal_enrollment_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/antenatal_enrollment_button.html
@@ -1,12 +1,12 @@
  <a id="antenatalenrollment_add_{{ subject_identifier }}" 
  	title="{{ title }}"
  	
- 	{% if antenatal_enrollment_model_obj %}
+ 	{% if antenatal_enrollment_model_obj%}
             class="btn btn-success btn-sm" data-toggle="tooltip"  data-placement="right"
             href="{{ add_anternatal_enrollment_href }}">
         {% else %}
             class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
-        href="{{ add_anternatal_enrollment_href }}">
+        	href="{{ add_anternatal_enrollment_href }}">
         {% endif %}
-     	Anternatal Enroll
+     	Antenatal Enroll
  </a>
