--- a/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
@@ -46,13 +46,13 @@
 	        {% if not result.consent %}
 	        	{% consent_button result %}
 	        {% else %}
-	        	{% consent_button result %}
-	        	
+	        {% if result.antenatal_enrollment%}
 	        	{% if result.antenatal_enrollment.is_eligible %}
 	        		{% dashboard_button result %}
 	        	{%else%}
 	        		{% antenatal_enrol_eligibility_button result %}
 	        	{% endif %}
+	        {% endif %}
 	        {% endif %}
 	     {% endif %}
     {% endif %}
