add consent button

--- a/td_dashboard/templates/td_dashboard/maternal_subject/listboard.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/listboard.html
@@ -1,5 +1,6 @@
 {% extends "edc_dashboard/listboard.html" %}
 {% load edc_base_extras %}
+{% load td_dashboard_extras %}
 
 
 {% block listboard_table_header %}
@@ -7,6 +8,7 @@
     <!-- begin results header -->
     <th>#</th>
     <th></th>
+    <th>Consent Vesrion form</th>
     <th>Identifier</th>
     <th>Subject</th>
     <th>Age / Born</th>
@@ -16,9 +18,40 @@
     <!-- end results header -->
 
 {% endblock listboard_table_header %}
+	
+{% block listboard_table_button_column %}
+	{% comment %}
 
+    result: model_wrapper, usually the SubjectConsentModelWrapper
+        Required attributes:
+            subject_identifier
+            version: (consent version)
+            href: (model_wrapper.href)
+
+	{% endcomment %}
+	<td style="white-space: nowrap">
+    <div class="btn-group">
+    <a title="Edit subject's consent form" role="button" 
+       class="btn btn-default btn-sm"
+           href="{{ result.href }}">
+        <i class="fa fa-pencil-alt fa-sm"></i>
+    </a>
+    {% if result.id %}
+
+         <a id="btn-subject-dashboard-{{result.subject_identifier}}" class="btn btn-primary btn-sm" role="button"   
+        title="Go to subject's dashboard" href="{% url subject_dashboard_url result.subject_identifier %}">
+        <i class="far fa-user-circle fa-sm"></i> Dashboard  <i class="fa fa-share"></i></a>
+    {% endif %}
+    </div>
+	</td>
+
+	<td>{% consent_version_button result %}
+	</td>
+{% endblock listboard_table_button_column %}
 
 {% block listboard_table_columns %}
+	
+	
 
     <td>{{ result.subject_identifier }}
     </td>
