add locator and offstudy buttons to dashboard

--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/special_forms.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/special_forms.html
@@ -22,5 +22,15 @@
 			{% maternal_labour_del_button subject_screening %}
 		</td>
       	</tr>
+      	<tr>
+		<td>
+			{% maternal_locator_button subject_screening %}
+		</td>
+      	</tr>
+      	<tr>
+		<td>
+			{% maternal_offstudy_button subject_screening %}
+		</td>
+      	</tr>
     </tbody>
 </table>
