add karabo screening and consent buttons

--- a/td_dashboard/templates/td_dashboard/infant_subject/dashboard/special_forms.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/dashboard/special_forms.html
@@ -7,5 +7,16 @@
 			{% infant_birth_button infant_birth_values %}
 		</td>
 		</tr>
+		
+		<tr>
+        <td>
+			{% karabo_screening_button infant_birth_values %}
+		</td>
+		</tr>
+		<tr>
+        <td>
+			{% karabo_subject_consent_button infant_birth_values %}
+		</td>
+		</tr>
     </tbody>
 </table>
