--- a/td_dashboard/templates/td_dashboard/buttons/karabo_consent_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/karabo_consent_button.html
@@ -1,13 +1,15 @@
 <a id="karabosubjectconsent_add_{{ subject_identifier }}"
  	title="{{ title }}"
  	
- 	{% if karabo_subject_consent_obj %}
-            class="btn btn-success btn-sm" data-toggle="tooltip"  data-placement="right"
-            href="{{ add_karabo_subject_consent_href }}">
-        {% else %}
-            class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
-        href="{{ add_karabo_subject_consent_href }}">
-        {% endif %}
-     	Karabo Subject Consent
+ 	{% if is_eligible %}
+		{% if karabo_subject_consent_obj %}
+	           class="btn btn-success btn-sm" data-toggle="tooltip"  data-placement="right"
+	           href="{{ add_karabo_subject_consent_href }}">
+	       {% else %}
+	           class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
+	       href="{{ add_karabo_subject_consent_href }}">
+	       {% endif %}
+	    	Karabo Subject Consent
+    {% endif %}
  </a>
  
