fix karabo buttons

--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/special_forms.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/special_forms.html
@@ -32,6 +32,15 @@
 			{% maternal_offstudy_button subject_screening %}
 		</td>
       	</tr>
-      	
+      	<tr>
+        <td>
+			{% karabo_screening_button subject_screening %}
+		</td>
+		</tr>
+		<tr>
+        <td>
+			{% karabo_subject_consent_button subject_screening %}
+		</td>
+		</tr>
     </tbody>
 </table>
