adding karabo eligibility button

--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/special_forms.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/special_forms.html
@@ -29,7 +29,8 @@
       	</tr>
       	<tr>
         <td>
-			{% karabo_screening_button subject_screening %}
+			{% karabo_eligibility_button subject_screening %}
+		    {% karabo_screening_button subject_screening %}
 		</td>
 		</tr>
 		<tr>
