--- a/td_dashboard/templates/td_dashboard/maternal_subject/listboard.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/listboard.html
@@ -2,13 +2,13 @@
 {% load edc_base_extras %}
 {% load td_dashboard_extras %}
 
-
+eligible
 {% block listboard_table_header %}
 
     <!-- begin results header -->
     <th>#</th>
     <th></th>
-    <th>Consent Vesrion form</th>
+    <th>Consent Version form</th>
     <th>Identifier</th>
     <th>Subject</th>
     <th>Age / Born</th>
