--- a/td_dashboard/templates/td_dashboard/buttons/karabo_screening_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/karabo_screening_button.html
@@ -1,3 +1,4 @@
+
 <a id="karabosubjectscreening_add_{{ subject_identifier }}"
  	title="{{ title }}"
  	
@@ -8,6 +9,6 @@
             class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
         href="{{ add_karabo_subject_screening_href }}">
         {% endif %}
-     	Karabo Subject Screening
+     	Karabo Screening
  </a>
  
