--- a/td_dashboard/templates/td_dashboard/buttons/karabo_screening_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/karabo_screening_button.html
@@ -1,14 +1,15 @@
-
-<a id="karabosubjectscreening_add_{{ subject_identifier }}"
- 	title="{{ title }}"
- 	
- 	{% if karabo_subject_screening_obj %}
-            class="btn btn-success btn-sm" data-toggle="tooltip"  data-placement="right"
-            href="{{ add_karabo_subject_screening_href }}">
-        {% else %}
-            class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
-        href="{{ add_karabo_subject_screening_href }}">
-        {% endif %}
-     	Karabo Screening
- </a>
+{% if infant_birth %}
+	<a id="karabosubjectscreening_add_{{ subject_identifier }}"
+	 	title="{{ title }}"
+	 	
+	 	{% if karabo_subject_screening_obj %}
+	            class="btn btn-success btn-sm" data-toggle="tooltip"  data-placement="right"
+	            href="{{ add_karabo_subject_screening_href }}">
+	        {% else %}
+	            class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
+	        href="{{ add_karabo_subject_screening_href }}">
+	        {% endif %}
+	     	Karabo Screening
+	 </a>
+{% endif %}
  
