--- a/td_dashboard/templates/td_dashboard/infant_subject/dashboard.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'edc_subject_dashboard/dashboard.html' %}
+{% load edc_visit_schedule_extras %}
 
 {% load staticfiles %}
 
@@ -11,7 +12,6 @@
 </span></span>
 {% endblock schedule_button %}
 	            
-	            
 {% block locator_information %}{% endblock locator_information %}
 
 {% block top_bar %}
@@ -22,7 +22,7 @@
 
 
 {% block side_bar %}
-	{{ block.super }}
+		{% include 'td_dashboard/infant_subject/dashboard/sidebar.html' %}
 	
     <div class="panel panel-default">
       <div class="panel-heading">
