--- a/td_dashboard/templates/td_dashboard/buttons/karabo_screening_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/karabo_screening_button.html
@@ -7,10 +7,10 @@
 	            class="btn btn-success btn-sm" data-toggle="tooltip"  data-placement="right"
 	            href="{{ add_karabo_subject_screening_href }}">
 	        {% else %}
-	        	{% if is_within_schedule %}
-	            class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
-	        href="{{ add_karabo_subject_screening_href }}">
-	        {% endif %}
+	        	{% if not is_outside_schedule %}
+	            	class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
+	        		href="{{ add_karabo_subject_screening_href }}">
+	        	{% endif %}
 	        {% endif %}
 	     	Karabo Screening
 	 </a>
