--- a/td_dashboard/templates/td_dashboard/infant_subject/dashboard.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/dashboard.html
@@ -11,6 +11,16 @@
     </a>
 </span></span>
 {% endblock schedule_button %}
+
+{% block schedule_footer %}
+				
+	{% subject_schedule_footer_row subject_identifier current_visit_schedule current_schedule infant_subject_dashboard_url %}
+{% endblock schedule_footer %}
+
+{% block appointments_schedule_footer %}
+				
+	{% subject_schedule_footer_row subject_identifier current_visit_schedule current_schedule infant_subject_dashboard_url %}
+{% endblock appointments_schedule_footer %}	
 	            
 {% block locator_information %}{% endblock locator_information %}
 
