--- a/td_dashboard/templates/td_dashboard/buttons/karabo_screening_button.html
+++ b/td_dashboard/templates/td_dashboard/buttons/karabo_screening_button.html
@@ -6,7 +6,7 @@
 	            class="btn btn-success btn-sm" data-toggle="tooltip"  data-placement="right"
 	            href="{{ add_karabo_subject_screening_href }}">
 	        {% else %}
-	        	{% if show_karabo_forms %}
+	        	{% if show_karabo_forms and infant_age_valid %}
 	            	class="btn btn-warning btn-sm" data-toggle="tooltip"  data-placement="right"
 	        		href="{{ add_karabo_subject_screening_href }}">
 	        	{% endif %}
