add maternal contact button

--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/special_forms.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/special_forms.html
@@ -24,6 +24,11 @@
       	</tr>
       	<tr>
 		<td>
+			{% maternal_contact_button subject_screening %}
+		</td>
+      	</tr>
+      	<tr>
+		<td>
 			{% maternal_locator_button subject_screening %}
 		</td>
       	</tr>
