--- a/td_dashboard/templates/td_dashboard/infant_subject/dashboard.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'edc_subject_dashboard/dashboard.html' %}
-{% load edc_visit_schedule_extras %}
+{% load td_dashboard_extras %}
 
 {% load staticfiles %}
 
@@ -12,14 +12,14 @@
 </span></span>
 {% endblock schedule_button %}
 
-{% block schedule_footer %}
+{% block dashboard_schedule_footer %}
 				
 	{% subject_schedule_footer_row subject_identifier current_visit_schedule current_schedule infant_subject_dashboard_url %}
-{% endblock schedule_footer %}
+{% endblock dashboard_schedule_footer %}
 
 {% block appointments_schedule_footer %}
 				
-	{% subject_schedule_footer_row subject_identifier current_visit_schedule current_schedule infant_subject_dashboard_url %}
+	{% subject_schedule_footer_row subject_identifier visit_schedule schedule infant_subject_dashboard_url %}
 {% endblock appointments_schedule_footer %}	
 	            
 {% block locator_information %}{% endblock locator_information %}
