--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'edc_subject_dashboard/dashboard.html' %}
+{% load td_dashboard_extras %}
 
 {% load staticfiles %}
 
@@ -9,6 +10,16 @@
     {% include "td_dashboard/maternal_subject/dashboard/top_bar.html" %}
 
 {% endblock top_bar %}
+
+{% block dashboard_schedule_footer %}
+				
+	{% subject_schedule_footer_row subject_identifier current_visit_schedule current_schedule subject_dashboard_url %}
+{% endblock dashboard_schedule_footer %}
+
+{% block appointments_schedule_footer %}
+				
+	{% subject_schedule_footer_row subject_identifier visit_schedule schedule subject_dashboard_url %}
+{% endblock appointments_schedule_footer %}	
 
 
 {% block side_bar %}
