--- a/td_dashboard/templates/td_dashboard/infant_subject/listboard.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/listboard.html
@@ -32,7 +32,7 @@
        {% endif %}
        {{ result.first_name }} {{ result.initials }}
     </td>
-    <td>{% age_in_years result.object.dob %}yrs {{ result.object.dob|date:"SHORT_DATE_FORMAT" }}</td>
+    <td>{{result.infant_age }}months {{ result.object.dob|date:"SHORT_DATE_FORMAT" }}</td>
     <td>{{ result.object.modified|date:"SHORT_DATETIME_FORMAT" }}</td>
     <td>{{ result.hostname_created }}</td>
 
