--- a/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_screening/listboard.html
@@ -47,7 +47,7 @@
 	        {% specimen_consent_button result %}
 	        
 	        {% if result.antenatal_enrollment%}
-	        	{% if result.antenatal_enrollment.is_eligible %}
+	        	{% if result.antenatal_enrollment %}
 	        		{% antenatal_enrol_eligibility_button result %}
 	        	{% endif %}
 	        {% endif %}
