change mother and infant dob format

--- a/td_dashboard/templates/td_dashboard/infant_subject/dashboard/demographics.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/dashboard/demographics.html
@@ -3,7 +3,7 @@
 
 <div class="list-group">
 <a class="list-group-item"><i class="fa fa-birthday-cake fa-fw"></i>
-{{ dob|date:"SHORT_DATE_FORMAT" }}
+{{ dob|date:"Y-m-d" }}
 {{infant_birth_values.infant_age}} months
 </a>
 <a class="list-group-item"><i class="far fa-address-card fa-fw"></i>
