--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/demographics.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/demographics.html
@@ -2,7 +2,7 @@
 
 <div class="list-group" >
 <a class="list-group-item"><i class="fa fa-birthday-cake fa-fw"></i>
-{{ dob|date:"SHORT_DATE_FORMAT" }}
+{{ dob|date:"Y-m-d" }}
 {% age_in_years dob %} yrs 
  {% if hiv_status == 'POS' %}
  	<span data-toggle="tooltip" data-placement="right" title="Enrollement HIV Status" > <i class="fa  fa-plus-circle  fa-fw"></i> </span>
