add infant and maternal death button

--- a/td_dashboard/templates/td_dashboard/infant_subject/dashboard/special_forms.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/dashboard/special_forms.html
@@ -1,17 +1,16 @@
 {% load td_dashboard_extras %}
 <table class="table table-condensed">
-    <thead></thead>
-    <tbody>
-        <tr>
-        <td>
-			{% infant_birth_button infant_birth_values %}
-		</td>
+	<thead></thead>
+	<tbody>
+		<tr>
+			<td>{% infant_birth_button infant_birth_values %}</td>
 		</tr>
 		<tr>
-        <td>
-			{% infant_offstudy_button infant_birth_values %}
-		</td>
+			<td>{% infant_offstudy_button infant_birth_values %}</td>
 		</tr>
-		
-    </tbody>
+		<tr>
+			<td>{% infant_death_button infant_birth_values %}</td>
+		</tr>
+
+	</tbody>
 </table>
