--- a/td_dashboard/templates/td_dashboard/infant_subject/dashboard.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/dashboard.html
@@ -12,6 +12,11 @@
 </span></span>
 {% endblock schedule_button %}
 
+{% block requisitions %}
+  	{% include "td_dashboard/infant_subject/dashboard/requisitions.html" %}
+{% endblock requisitions %}
+
+
 {% block dashboard_schedule_footer %}
 				
 	{% subject_schedule_footer_row subject_identifier current_visit_schedule current_schedule infant_subject_dashboard_url %}
