--- a/td_dashboard/templates/td_dashboard/infant_subject/dashboard/odk_archives.html
+++ b/td_dashboard/templates/td_dashboard/infant_subject/dashboard/odk_archives.html
@@ -1,10 +1,12 @@
-{% load td_dashboard_extras %}
-
+{% load odk_dashboard_extras %}
 <table class="table table-condensed">
 	<tr>
-		<td>{% infant_notes_archives_button infant_birth_values.infant_birth %}</td>
+		<td>{% note_to_file_button infant_birth_values.infant_birth %}</td>
 	</tr>
 	<tr>
-		<td>{% infant_labresults_button infant_birth_values.infant_birth %}</td>
+		<td>{% clinician_notes_archives_button infant_birth_values.infant_birth %}</td>
+	</tr>
+	<tr>
+		<td>{% labresults_button infant_birth_values.infant_birth %}</td>
 	</tr>
 </table>
