--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/odk_archives.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/odk_archives.html
@@ -1,11 +1,21 @@
-{% include 'edc_odk/odk_forms/sidebar.html' %}
-{% load td_dashboard_extras %}
-
+{% load odk_dashboard_extras %}
 <table class="table table-condensed">
 	<tr>
-		<td>{% maternal_notes_archives_button subject_screening %}</td>
+		<td>{% consent_copies_button consent %}</td>
 	</tr>
 	<tr>
-		<td>{% maternal_labresults_button subject_screening %}</td>
+		<td>{% omang_copies_button consent %}</td>
+	</tr>
+	<tr>
+		<td>{% specimen_consent_button consent %}</td>
+	</tr>
+	<tr>
+		<td>{% note_to_file_button consent %}</td>
+	</tr>
+	<tr>
+		<td>{% clinician_notes_archives_button consent %}</td>
+	</tr>
+	<tr>
+		<td>{% labresults_button consent %}</td>
 	</tr>
 </table>
