Changed button title from clinician notes to clinician notes archive

--- a/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/odk_archives.html
+++ b/td_dashboard/templates/td_dashboard/maternal_subject/dashboard/odk_archives.html
@@ -1,4 +1,7 @@
+{% load td_dashboard_extras %}
 {% load odk_dashboard_extras %}
+
+
 <table class="table table-condensed">
 	<tr>
 		<td>{% consent_copies_button consent %}</td>
@@ -13,7 +16,7 @@
 		<td>{% note_to_file_button consent %}</td>
 	</tr>
 	<tr>
-		<td>{% clinician_notes_archives_button consent %}</td>
+		<td>{% custom_clinician_notes_archives_button consent %}</td>x
 	</tr>
 	<tr>
 		<td>{% labresults_button consent %}</td>
